changed h2 font and color

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,6 +47,11 @@ a {
 	color: black;
 }
 
+h2{
+	font-family: 'Seaweed Script', cursive;
+	color:orange;
+}
+
 /* Form Styling */
 textarea {
 	resize: none;
