--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,6 +23,7 @@ body {
   padding: 5px;
   background-color: #26507F;
 	text-align: center;
+	border-radius: 10px;
 }
 .name {
 	font-family: 'Michroma', sans-serif;
@@ -32,6 +33,7 @@ body {
 .profile {
 	heigt:200px;
 	width: 200px;
+	border-radius: 30px;
 }
 .social {
 	height: 50px;
