changed h2 font color and type

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -50,8 +50,8 @@ a {
 }
 
 h2{
-	font-family: 'Seaweed Script', cursive;
-	color:orange;
+	font-family: 'Oswald', sans-serif;
+	color:#9BBAFF;
 }
 
 /* Form Styling */
