--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,19 +11,19 @@ body {
 	font-size: 20px;
 	text-decoration: none;
 	font-family: 'Michroma', sans-serif;
+	padding: 5px;
 }
 .navigation {
-	text-align: right;
+	position:fixed;
+	right: 0;
 }
 
-/* Heading Block Styling */
+/* Header Block Styling */
 .header {
 	margin: auto;
   width: 30%;
   padding: 5px;
-  background-color: #26507F;
 	text-align: center;
-	border-radius: 10px;
 }
 .name {
 	font-family: 'Michroma', sans-serif;
@@ -48,7 +48,6 @@ a {
 	text-decoration: none;
 	color: black;
 }
-
 h2{
 	font-family: 'Oswald', sans-serif;
 	color:#9BBAFF;
