--- a/styles/styles.css
+++ b/styles/styles.css
@@ -43,3 +43,14 @@ a{
 	color:white;
 	font-size: 20px;
 }
+
+/*About Me*/
+.me {
+	text-align: center;
+}
+.profile {
+	width: 135px;
+	height: 240px;
+	margin-right: auto;
+	margin-left: auto;
+}
