--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,52 +5,6 @@ body {
 	color: white;
 }
 
-/*Header Styling*/
-.top {
-	border-bottom: 4px #003040 solid;
-	width: 101%;
-	margin-left: -10px;
-}
-
-.name {
-	font-size: 20px;
-	margin-left: 10px;
-}
-
-.dev {
-	color:#78747F;
-}
-
-/*Nav Styling*/
-nav {
-	position: absolute;
-	top:0;
-	right:0;
-	margin:20px;
-}
-
-li {
-	list-style: none;
-	display: inline;
-	padding-right:2px;
-	padding-left:2px;
-	font-size: 20px;
-	color: #003040;
-}
-
-a{
-	text-decoration: none;
-	color:white;
-	font-size: 20px;
-}
-
-/*About Me*/
-.me {
-	text-align: center;
-}
-.profile {
-	width: 135px;
-	height: 240px;
-	margin-right: auto;
-	margin-left: auto;
+#navbar {
+	background-color: black;
 }
